# llm_invoke_cpp

./: .gitignore  CMakeLists.txt  MEMO.md  README.md  ROADMAP.md  SCHEMA_TRAITS.md  SCHEMA_TRAITS_PROMPT.md
.github/workflows/: ci.yml
examples/func_registry/: func_registry_demo.cpp
examples/json_invoke/: json_invoke_demo.cpp  person.hpp  person_support.hpp  priority_support.hpp
examples/json_stateful/: json_stateful_demo.cpp
examples/json_tracing/: json_tracing_demo.cpp
examples/mcp_stdio/: mcp_stdio_server_demo.cpp  test_mcp.ps1
examples/task_scheduler/: task_scheduler_demo.cpp
examples/trace_recorder/: trace_recorder_demo.cpp
include/func_registry/: any_callable.hpp  call_result.hpp  func_registry.hpp  function_summary.hpp  function_traits.hpp  introspection.hpp  registry_introspection.hpp
include/json_invoke/: introspection.hpp  json_common.hpp  json_error.hpp  json_introspection.hpp  json_invoke.hpp  json_tool_execution_semantics.hpp  json_trace.hpp  json_traits.hpp
include/json_session_invoke/: json_session_invoke.hpp  json_session_support.hpp  session_objects.hpp
include/json_session_invoke/detail/: stateful_runtime.hpp  stateful_tool_runtime.hpp
include/mcp/: mcp_stdio_server.hpp
include/runtime/: runtime_facade.hpp
include/task_scheduler/: request_classifier.hpp  task_scheduler.hpp  task_scheduler_facade.hpp
include/tool_meta/: tool_introspection.hpp
include/tools/: trace_recorder.hpp
include/type_meta/: enum_traits.hpp  type_introspection.hpp  type_schema.hpp
tests/: func_registry_tests.cpp  json_invoke_tests.cpp  json_stateful_tests.cpp  mcp_stdio_tests.cpp  runtime_tests.cpp  snapshot_test_utils.hpp  task_scheduler_tests.cpp
tests/snapshots/: tool_schemas_snapshot.json  tool_specs_snapshot.json
